--- a/S02 - Data Wrangling/BLU02 - Advanced Wrangling/Exercise notebook.ipynb
+++ b/S02 - Data Wrangling/BLU02 - Advanced Wrangling/Exercise notebook.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "fd525da6",
    "metadata": {
     "deletable": false,
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "e539f29e",
    "metadata": {
     "deletable": false,
@@ -101,25 +101,32 @@
     "    # 1950 inclusive and onwards (just the filename, no complete path.)\n",
     "    # files_from_1950: List[str] = ...\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    files_from_1950 = [file for file in os.listdir(folder_path) if int(file[0:4])>=1950 ]\n",
+    "    # raise NotImplementedError()\n",
     "    # Create a list with the dataframes\n",
     "    # seasons: List[pd.DataFrame] = ...\n",
+    "    seasons = [pd.read_csv(os.path.join(folder_path, file)) for file in files_from_1950]\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
     "    # Use pd.concat to create a single dataframe.\n",
     "    # programs: pd.DataFrame = ...\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    programs = pd.concat(seasons, axis=0, ignore_index=True)\n",
+    "    # raise NotImplementedError()\n",
     "    # Drop the column GUID.\n",
     "    # programs = ...\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    programs = programs.drop(\"GUID\",axis=1)\n",
+    "    # raise NotImplementedError()\n",
     "    ## Remove Duplicated lines.\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    programs = programs.drop_duplicates()\n",
+    "    # raise NotImplementedError()\n",
     "    # Set the index to be the column ProgramID\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    programs = programs.set_index(\"ProgramID\")\n",
+    "\n",
+    "    # raise NotImplementedError()\n",
     "    return programs\n",
     "\n",
     "programs = read_programs(os.path.join('data', 'programs'))"
@@ -127,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "6d5b3ffb",
    "metadata": {
     "deletable": false,
@@ -173,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "d0f86c9d",
    "metadata": {
     "deletable": false,
@@ -192,18 +199,27 @@
     "    # Read concerts data and drop the GUID column.\n",
     "    # concerts: pd.DataFrame = ...\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
     "    # Remember to_datetime? We need it here. We need to parse the columns Date and \n",
     "    # Time. Use pd.to_datetime(...).dt.date for the Date. \n",
     "    # then use the same logic to create the column Hour and Minute from Time column.\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
     "    ## Remove Duplicated lines.\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
     "    ## Remove all lines with empty Time column. Then also drop the Time column.\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
+    "    concerts: pd.DataFrame = (pd.read_csv(file_path)\n",
+    "                                .dropna(subset=\"Time\")\n",
+    "                                .assign(Date = lambda x: pd.to_datetime(x['Date']).dt.date,\n",
+    "                                        Hour = lambda x: pd.to_datetime(x['Time']).dt.hour,\n",
+    "                                        Minute = lambda x: pd.to_datetime(x['Time']).dt.minute\n",
+    "                                    )\n",
+    "                                .drop(['Time', 'GUID'], axis=1)\n",
+    "                                .drop_duplicates()\n",
+    "                                )\n",
     "    \n",
     "    return concerts\n",
     "\n",
@@ -212,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "52e0b5f0",
    "metadata": {
     "deletable": false,
@@ -265,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "61a56101",
    "metadata": {
     "deletable": false,
@@ -284,12 +300,13 @@
     "# Join only the concerts with valid ProgramIDs\n",
     "# nyp = ...\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "nyp: pd.DataFrame = pd.merge(programs, concerts, how='inner', on='ProgramID')\n",
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "26483891",
    "metadata": {
     "deletable": false,
@@ -338,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "id": "cb533fb6",
    "metadata": {
     "deletable": false,
@@ -357,31 +374,40 @@
     "    # Read the works data.\n",
     "    # works: pd.DataFrame = ...\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
     "    # Remove the Intervals (attention to the values in the isInterval column).\n",
     "    # works: pd.DataFrame = ...\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
     "    # Select the columns ProgramID, WorkID, ComposerName, WorkTitle, Movement and ConductorName.\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
     "    ## Remove Duplicated lines.\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
     "    ## Remove all lines with empty Movement column.\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    \n",
+    "    # raise NotImplementedError()\n",
+    "    works: pd.DataFrame = (pd.read_csv(file_path)\n",
+    "                            .pipe(lambda df: df[~df['isInterval']])\n",
+    "                            .filter(items=['ProgramID', 'WorkID', 'ComposerName', 'WorkTitle', 'Movement', 'ConductorName'])\n",
+    "                            .drop_duplicates()\n",
+    "                            .dropna(subset='Movement')\n",
+    "                            )\n",
     "    return works\n",
     "\n",
     "\n",
     "def read_soloists(file_path):\n",
     "    # Read the soloists data and drop GUID and MovementID Columns\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
     "    ## Remove Duplicated lines.\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
+    "    soloists: pd.DataFrame = (pd.read_csv(file_path)\n",
+    "                                .drop(['GUID', 'MovementID'], axis=1)\n",
+    "                                .drop_duplicates()\n",
+    "                                )\n",
     "    return soloists\n",
     "\n",
     "\n",
@@ -391,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "id": "11f60f07",
    "metadata": {
     "deletable": false,
@@ -442,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "id": "dfae5297",
    "metadata": {
     "deletable": false,
@@ -461,12 +487,13 @@
     "# ProgramId, WorkID\n",
     "# works_and_soloists : pd.DataFrame = ....\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()\n",
+    "works_and_soloists : pd.DataFrame = pd.merge(works, soloists, how='inner', on=['ProgramID', 'WorkID'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "id": "7184d4cd",
    "metadata": {
     "deletable": false,
@@ -515,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "id": "6a4eee72",
    "metadata": {
     "deletable": false,
@@ -534,12 +561,13 @@
     "# You need to figure out the common column shared between the two dataframes\n",
     "# nyp_merged = ...\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()\n",
+    "nyp_merged: pd.DataFrame = pd.merge(nyp, works_and_soloists, how='inner', on='ProgramID')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "id": "55c7dc60",
    "metadata": {
     "deletable": false,
@@ -1129,7 +1157,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.10 ('BLU02')",
    "language": "python",
    "name": "python3"
   },
@@ -1143,7 +1171,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.8.10"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "be959f3e494a6288bd19fa1fcd896f9bc0f6f332980daac3c2fe6da31f3a8ece"
+   }
   }
  },
  "nbformat": 4,
