--- a/S02 - Data Wrangling/BLU02 - Advanced Wrangling/Exercise notebook.ipynb
+++ b/S02 - Data Wrangling/BLU02 - Advanced Wrangling/Exercise notebook.ipynb
@@ -1267,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 192,
    "id": "43b78c45",
    "metadata": {
     "deletable": false,
@@ -1282,29 +1282,43 @@
    },
    "outputs": [],
    "source": [
+    "from typing import List\n",
+    "\n",
+    "\n",
     "class DateTransformer(BaseEstimator, TransformerMixin):\n",
     "    # Implement the __init__ method.\n",
     "    # Our DateTransformer must be able to receive two parameters: \n",
     "    # datetime_cols: a list, that contains the datetime cols that should be converted\n",
     "    # ref_date_col - indicates the name of the column that should be used as reference date,\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
+    "    def __init__(self, datetime_cols: List[str], ref_date_col: str) -> None:\n",
+    "        self.datetime_cols = datetime_cols\n",
+    "        self.ref_date_col = ref_date_col\n",
+    "        \n",
     "        \n",
     "    # There's no need for a fit method in this case, it does nothing.\n",
     "    # We should be able to call fit without any explicit parameters.\n",
     "    # Meaning: we should be able to call transformer.fit().\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
+    "    def fit(self, X: pd.DataFrame, y=None)-> None:\n",
+    "        return self\n",
     "\n",
     "    # Transform should transform all datetime columns into the difference in days to the reference date.\n",
     "    # The reference date column should be dropped. \n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    # raise NotImplementedError()\n",
+    "    def transform(self, X: pd.DataFrame) -> pd.DataFrame:\n",
+    "        X = X.copy()\n",
+    "        for datetime_col in self.datetime_cols:\n",
+    "            X[datetime_col] = (pd.to_datetime(X[datetime_col]) - pd.to_datetime(X[self.ref_date_col])).dt.days.astype(int)\n",
+    "        return X.drop(self.ref_date_col, axis=1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 194,
    "id": "bab1d26c",
    "metadata": {
     "deletable": false,
@@ -1398,7 +1412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 202,
    "id": "ec0afe11",
    "metadata": {
     "deletable": false,
@@ -1411,14 +1425,29 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAE: 20737.060193147467\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a pipeline including:\n",
     "#   1 - 'date_converter', DateTransformer(['BuildingDate', 'RemodAddDate'], ref_date_col='SellingDate')\n",
     "#   2 - 'standard_scaler', StandardScaler() with the default parameters\n",
     "#   3 - 'model', LinearRegression\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "# raise NotImplementedError()\n",
+    "pipeline = Pipeline(\n",
+    "        [\n",
+    "        ('date_converter', DateTransformer(datetime_cols=['BuildingDate', 'RemodAddDate'], ref_date_col='SellingDate')),\n",
+    "        ('robust_scaler', RobustScaler()),\n",
+    "        ('model', LinearRegression())\n",
+    "        ]\n",
+    "    )\n",
     "\n",
     "\n",
     "pipeline.fit(X_train, y_train)\n",
@@ -1430,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 203,
    "id": "01715551",
    "metadata": {
     "deletable": false,
@@ -1497,7 +1526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 207,
    "id": "6404b9be",
    "metadata": {
     "deletable": false,
@@ -1514,12 +1543,13 @@
    "source": [
     "#coefs = ....\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "coefs = pipeline.named_steps['model'].coef_\n",
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 208,
    "id": "8810e2d4",
    "metadata": {
     "deletable": false,
