--- a/S02 - Data Wrangling/BLU03 - Data Sources/Exercise notebook.ipynb
+++ b/S02 - Data Wrangling/BLU03 - Data Sources/Exercise notebook.ipynb
@@ -886,33 +886,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "nbgrader": {
-     "grade": false,
-     "grade_id": "cell-645c2fbe3b16c880",
-     "locked": false,
-     "schema_version": 3,
-     "solution": true
-    }
-   },
-   "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "query = '''\n",
+    "        SELECT stock.\"Sector\" as sector \n",
+    "        FROM info \n",
+    "            INNER JOIN stock \n",
+    "                ON stock.\"Name\" = info.\"Name\" \n",
+    "            INNER JOIN financial\n",
+    "                ON financial.\"Name\" = info.\"Name\"\n",
+    "            INNER JOIN location\n",
+    "                ON location.\"Name\" = info.\"Name\" \n",
+    "        WHERE info.\"Sp500\" = 1 AND location.\"State\" = \\'LA\\'\n",
+    "        ORDER BY financial.\"Marketcap\" DESC;\n",
+    "        '''\n",
+    "q4_answer = pd.read_sql_query(query, engine).sector.to_list()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {
     "deletable": false,
     "editable": false,
