--- a/S02 - Data Wrangling/BLU03 - Data Sources/Exercise notebook.ipynb
+++ b/S02 - Data Wrangling/BLU03 - Data Sources/Exercise notebook.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
        "11     False        False        False  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
        "4           Retail  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +571,7 @@
        "4   4           The Aaron's Company, Inc.          0      12.26"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +726,7 @@
        "4   4           The Aaron's Company, Inc.      0          0      0"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +874,7 @@
        "4   4           The Aaron's Company, Inc.    GA"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -907,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 16,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -951,26 +951,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "nbgrader": {
-     "grade": false,
-     "grade_id": "cell-c5ef88aa51ea99f6",
-     "locked": false,
-     "schema_version": 3,
-     "solution": true
-    }
-   },
+   "execution_count": 33,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "query = '''\n",
+    "        SELECT  \n",
+    "                stock.\"Sector\" as financial_sector,\n",
+    "                AVG(financial.\"Lastprice\") as average_last_price,\n",
+    "                MAX(financial.\"Lastprice\") as max_last_price\n",
+    "        FROM financial\n",
+    "        INNER JOIN stock\n",
+    "                ON stock.\"Name\" = financial.\"Name\"\n",
+    "        GROUP BY financial_sector\n",
+    "        ORDER BY average_last_price DESC\n",
+    "        LIMIT 1\n",
+    "        ;\n",
+    "        '''\n",
+    "q5_answer_1, _, q5_answer_2 = pd.read_sql_query(query, engine).values.tolist()[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "deletable": false,
     "editable": false,
