--- a/S02 - Data Wrangling/BLU03 - Data Sources/Exercise notebook.ipynb
+++ b/S02 - Data Wrangling/BLU03 - Data Sources/Exercise notebook.ipynb
@@ -1045,7 +1045,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_url = \"https://pokemon-api.lisbondatascience.org/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1064,15 +1073,59 @@
     "# response = ...\n",
     "# q6_answer_names = ...\n",
     "# q6_answer_speeds = ...\n",
-    "\n",
+    "endpoint = 'pokemon'\n",
+    "params = {\n",
+    "    'name': 'Char',\n",
+    "    'exact': False,\n",
+    "    'poke_type': 'Fire'\n",
+    "}\n",
+    "response = requests.get(f'{base_url}{endpoint}', params=params)\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "# raise NotImplementedError()\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q6_answer_names = [pokemon.get('name', {}).get('english') for pokemon in response.json()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q6_answer_speeds = [pokemon.get('base', {}).get('Speed') for pokemon in response.json()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Charmander': 65, 'Charmeleon': 80, 'Charizard': 100}"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict(zip(q6_answer_names, q6_answer_speeds))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1121,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1138,12 +1191,27 @@
     "# Do an HTTP GET request to find which Pokemon moves have 200 or more power.\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "endpoint = 'moves'\n",
+    "params = {\n",
+    "    'power': 200,\n",
+    "}\n",
+    "response = requests.get(f'{base_url}{endpoint}', params=params)\n",
+    "\n",
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q7_answer = [pokemon.get('ename') for pokemon in response.json()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {
     "deletable": false,
     "editable": false,
