--- a/S02 - Data Wrangling/BLU03 - Data Sources/Exercise notebook.ipynb
+++ b/S02 - Data Wrangling/BLU03 - Data Sources/Exercise notebook.ipynb
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1045,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1054,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1096,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1105,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1114,7 +1114,7 @@
        "{'Charmander': 65, 'Charmeleon': 80, 'Charizard': 100}"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1125,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 24,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1174,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 25,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1202,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1211,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 27,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1263,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1279,27 +1279,37 @@
     "# Assign the URL of the page to be scraped to variable url\n",
     "# url = ...\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "base_url = 'https://s02-infrastructure.s3.eu-west-1.amazonaws.com/ldsa-bork/'\n",
+    "# raise NotImplementedError()\n",
     "\n",
     "# Do a GET request to get the page content, using the url we've just defined\n",
     "# response = ...\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "endpoint = 'index.html'\n",
+    "params = {}\n",
+    "response = requests.get(f'{base_url}{endpoint}', params=params)\n",
+    "\n",
+    "# raise NotImplementedError()\n",
     "\n",
     "# Instantiate a soup object using the response of the GET request\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
-    "    \n",
+    "# raise NotImplementedError()\n",
+    "soup = BeautifulSoup(response.content, 'html.parser')\n",
+    "\n",
+    "fav_things_li = soup.find('ul', class_='favourite-things').findAll('li')\n",
+    "\n",
+    "q8_answer = [fav_thing.text for fav_thing in fav_things_li]\n",
+    "\n",
     "# Now it's the tricky part!\n",
     "# Parse the soup in order to retrieve the list of things.\n",
     "# In the end, store the favourite things in a list and assign it to variable q10_answer.\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1342,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1358,26 +1368,27 @@
     "# Assign the URL of the page to be scraped to variable url\n",
     "# url = ...\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "# raise NotImplementedError()\n",
     "\n",
     "# Do a GET request to get the page content, using the url we've just defined\n",
     "# response = ...\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "# raise NotImplementedError()\n",
     "\n",
     "# Instanciate a soup object using the response of the GET request\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "# raise NotImplementedError()\n",
     "\n",
     "# Parse the soup in order to retrieve the tag of the tennis ball image.\n",
     "# Assign it to variable q11_answer.\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()\n",
+    "q9_answer = soup.find('img', attrs={'name': 'ball'})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "deletable": false,
     "editable": false,
