--- a/S03 - Time Series/BLU04 - Time Series Concepts/Exercise notebook.ipynb
+++ b/S03 - Time Series/BLU04 - Time Series Concepts/Exercise notebook.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -97,7 +97,76 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>customers</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>35439</th>\n",
+       "      <td>31-01-2015</td>\n",
+       "      <td>1398</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15451</th>\n",
+       "      <td>30-11-2013</td>\n",
+       "      <td>1272</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71816</th>\n",
+       "      <td>10-01-2017</td>\n",
+       "      <td>1732</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70225</th>\n",
+       "      <td>09-12-2016</td>\n",
+       "      <td>1881</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52180</th>\n",
+       "      <td>28-12-2015</td>\n",
+       "      <td>1775</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             date  customers\n",
+       "35439  31-01-2015       1398\n",
+       "15451  30-11-2013       1272\n",
+       "71816  10-01-2017       1732\n",
+       "70225  09-12-2016       1881\n",
+       "52180  28-12-2015       1775"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "store = utils.get_store_data()\n",
     "store.head()"
@@ -141,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -162,12 +231,16 @@
     "#store =            # Don't forget best practices\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "\n",
+    "store['date'] = pd.to_datetime(store['date'])\n",
+    "store = store.set_index('date', drop=True).sort_index()\n",
+    "\n",
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1353,7 +1426,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "Python 3.8.10 ('BLU04')",
    "language": "python",
    "name": "python3"
   },
@@ -1367,11 +1440,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.10"
   },
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "684d00d63b734bb6a1e9e7ce02321bde71e9bbdc0304297c6adf6a57dbc9ef69"
    }
   }
  },
