--- a/S03 - Time Series/BLU04 - Time Series Concepts/Exercise notebook.ipynb
+++ b/S03 - Time Series/BLU04 - Time Series Concepts/Exercise notebook.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 49,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -162,7 +162,7 @@
        "52180  28-12-2015       1775"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -232,7 +232,7 @@
     "\n",
     "# YOUR CODE HERE\n",
     "\n",
-    "store['date'] = pd.to_datetime(store['date'])\n",
+    "store['date'] = pd.to_datetime(store['date'], dayfirst=True)\n",
     "store = store.set_index('date', drop=True).sort_index()\n",
     "\n",
     "# raise NotImplementedError()"
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 51,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -322,14 +322,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>customers</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [customers]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## UNGRADED CELL\n",
     "# use this cell to write your code\n",
     "# how would you look for duplicate timestamps?\n",
-    "# ..."
+    "# ...\n",
+    "store.loc[store.index.duplicated()]"
    ]
   },
   {
@@ -370,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -392,12 +437,15 @@
     "#store_complete = \n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "\n",
+    "store_complete = pd.concat([store_complete.loc['2013-01-02':'2017-07-31'].asfreq(freq='D'), store_complete.loc['2017-08-01':]])\n",
+    "\n",
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -464,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -479,15 +527,15 @@
    "source": [
     "# hint: the answer should be a timestamp\n",
     "\n",
-    "#worst_day_2016 =\n",
+    "worst_day_2016 = store_complete.loc['2016'].idxmin()[0]\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -501,7 +549,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The worst day in 2016 was 4 of January. Talk about new year's blues !\n"
+     ]
+    }
+   ],
    "source": [
     "expected_hash = '54ca8373016eeb8acb093f60f9d909b8fc1bcc8e37d9f762530df4053bb83a1d'\n",
     "assert hashlib.sha256(str(worst_day_2016).encode()).hexdigest() == expected_hash\n",
@@ -534,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -551,12 +607,14 @@
     "#max_customers_Friday =\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "max_customers_Friday = store_complete[store_complete.index.dayofweek==4]['customers'].max()\n",
+    "\n",
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -570,7 +628,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yep! The highest count we ever had on a Friday was 3023 customers. Don't tell your boss.\n"
+     ]
+    }
+   ],
    "source": [
     "expected_hash = 'b134ce47a896876fe3111bfed26cbe06363ede8a60ada5f70fe285d04fc4b7e9'\n",
     "assert hashlib.sha256(str(int(max_customers_Friday)).encode()).hexdigest() == expected_hash\n",
