--- a/S03 - Time Series/BLU04 - Time Series Concepts/Exercise notebook.ipynb
+++ b/S03 - Time Series/BLU04 - Time Series Concepts/Exercise notebook.ipynb
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -702,15 +702,15 @@
    "source": [
     "# hint: the solution expects a float\n",
     "\n",
-    "#max_increase = \n",
+    "max_increase = store_complete.diff()['customers'].max()\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 177,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -770,16 +770,17 @@
     "# which are of the form \"the second month of the year\" will not pass the grader. \n",
     "# hint: by default pandas uses freq='M'.\n",
     "\n",
-    "#sum_monthly_customers = \n",
+    "sum_monthly_customers = store_complete.resample('M').sum()\n",
     "#last_bad_month = \n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "last_bad_month = sum_monthly_customers[sum_monthly_customers['customers']<45_000].tail(1).asfreq('M').index[0]\n",
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 178,
    "metadata": {
     "deletable": false,
     "editable": false,
