--- a/S03 - Time Series/BLU04 - Time Series Concepts/Exercise notebook.ipynb
+++ b/S03 - Time Series/BLU04 - Time Series Concepts/Exercise notebook.ipynb
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 179,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -855,7 +855,82 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>store_nbr</th>\n",
+       "      <th>customers</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>40929</th>\n",
+       "      <td>23-05-2015</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2053</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19072</th>\n",
+       "      <td>17-02-2014</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1766</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38092</th>\n",
+       "      <td>26-03-2015</td>\n",
+       "      <td>15</td>\n",
+       "      <td>1336</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46726</th>\n",
+       "      <td>14-09-2015</td>\n",
+       "      <td>35</td>\n",
+       "      <td>637</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8972</th>\n",
+       "      <td>14-07-2013</td>\n",
+       "      <td>44</td>\n",
+       "      <td>4383</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             date  store_nbr  customers\n",
+       "40929  23-05-2015          6       2053\n",
+       "19072  17-02-2014          2       1766\n",
+       "38092  26-03-2015         15       1336\n",
+       "46726  14-09-2015         35        637\n",
+       "8972   14-07-2013         44       4383"
+      ]
+     },
+     "execution_count": 179,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "chain = utils.get_stores_data()\n",
     "chain.head()"
@@ -863,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 180,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -875,7 +950,15 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We now have 82678 data points. Wooooow!\n"
+     ]
+    }
+   ],
    "source": [
     "print('We now have %0.0f data points. Wooooow!' % len(chain))"
    ]
@@ -937,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 181,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -955,13 +1038,16 @@
     "#chain = \n",
     "#chain =\n",
     "\n",
+    "chain['date'] = pd.to_datetime(chain['date'], dayfirst=True)\n",
+    "chain = chain.set_index(['date', 'store_nbr']).sort_index()\n",
+    "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 182,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1007,7 +1093,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idx = pd.IndexSlice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1532"
+      ]
+     },
+     "execution_count": 197,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chain.loc[idx['2016-04']].groupby(level='store_nbr').max().loc[10, 'customers']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1023,15 +1138,15 @@
    "source": [
     "# hint: the answer should be an integer\n",
     "\n",
-    "#max_store10 =\n",
+    "max_store10 =chain.loc[idx['2016-04']].groupby(level='store_nbr').max().loc[10, 'customers']\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 199,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1045,7 +1160,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correct! The maximum daily number of customers on April 2016 was 1532.\n"
+     ]
+    }
+   ],
    "source": [
     "expected_hash = 'f76cb816b3f74ecf30d387c64869038ac163fe26f8aabd727c1071dd567fc3d5'\n",
     "assert hashlib.sha256(str(max_store10).encode()).hexdigest() == expected_hash\n",
@@ -1088,7 +1211,7 @@
    "outputs": [],
    "source": [
     "# hint : Check number of stores at last day of each year.\n",
-    "#nr_stores_2014 =\n",
+    "# nr_stores_2014 =\n",
     "#nr_stores_2015 = \n",
     "#nr_stores_opened_2015 = \n",
     "\n",
