--- a/S03 - Time Series/BLU04 - Time Series Concepts/Exercise notebook.ipynb
+++ b/S03 - Time Series/BLU04 - Time Series Concepts/Exercise notebook.ipynb
@@ -1503,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1512,7 +1512,7 @@
        "0.6697187783750844"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1523,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 33,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1557,7 +1557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 34,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1622,41 +1622,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "nbgrader": {
-     "grade": false,
-     "grade_id": "cell-8c43928a919c7736",
-     "locked": false,
-     "schema_version": 3,
-     "solution": true,
-     "task": false
-    }
-   },
+   "execution_count": 35,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# This one is a bit harder and there are several ways to solve it. For this reason the\n",
-    "# body of the solution is not presented as in the previous questions. \n",
-    "\n",
-    "# A few clues:\n",
-    "# Remember that you have all stores data inside the variable `chain`.\n",
-    "# Most solutions are going to require a for loop to run through the various stores\n",
-    "# Assume linear trends, where the trend is characterized by the slope of the linear regression\n",
-    "# This is just an EDA, we're not building a predictive model, so you don't need to split your dataset\n",
-    "# For each store time series you create, don't forget to **fill the missing dates using a `KNNImputer`**.\n",
-    "\n",
-    "\n",
-    "# stores_neg_trend = \n",
-    "\n",
-    "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "chain_resampled = chain.unstack().resample('D').asfreq().droplevel(None, axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def linear_regression_timeseries (series: pd.Series) -> float:\n",
+    "    series = series.copy()\n",
+    "    series = series.loc[series.first_valid_index():series.last_valid_index()]\n",
+    "    imputer = KNNImputer()\n",
+    "    lr = LinearRegression()\n",
+    "    series_imputed = pd.Series(imputer.fit_transform(series.values.reshape(-1, 1)).reshape(-1), index=series.index)\n",
+    "    lr.fit(series_imputed.values.reshape(-1, 1), series_imputed.index)\n",
+    "    return lr.coef_[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stores_neg_trend = chain_resampled.apply(lambda x: linear_regression_timeseries(x), axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stores_neg_trend = stores_neg_trend[stores_neg_trend<0].index.to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1670,7 +1679,16 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correct! Your boss is ecstatic about your work and decides to give you a 200% raise!...\n",
+      "Who cares about going home earlier after all?\n"
+     ]
+    }
+   ],
    "source": [
     "expected_hash = 'd10932831240fb4c00bfe0dec352f334a4798d8424cc91bfa3c9eeec0e4e0939'\n",
     "assert hashlib.sha256(str(stores_neg_trend).encode()).hexdigest() == expected_hash\n",
