--- a/S03 - Time Series/BLU06 - Machine Learning for Time Series/Exercise notebook.ipynb
+++ b/S03 - Time Series/BLU06 - Machine Learning for Time Series/Exercise notebook.ipynb
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
        "2010-01-01 04:00:00  0.095"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
        "<Figure size 1200x400 with 1 Axes>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -508,7 +508,7 @@
        "[2134 rows x 5 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -748,7 +748,7 @@
        "[2110 rows x 5 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1024,7 @@
        "2010-03-31 22:00:00  0.271  0.256  0.160  0.025   0.286"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1035,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1076,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1097,7 +1097,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1114,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1158,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1171,10 +1171,10 @@
    },
    "outputs": [],
    "source": [
-    "X_df_test =\n",
-    "y_df_test = \n",
-    "y_predict = \n",
-    "test_mae = \n",
+    "X_df_test = df_test.drop('target', axis=1)\n",
+    "y_df_test = df_test['target']\n",
+    "y_predict = model.predict(X_df_test)\n",
+    "test_mae = mean_absolute_error(y_df_test, y_predict)\n",
     "\n",
     "# YOUR CODE HERE\n",
     "# raise NotImplementedError()"
@@ -1182,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1256,12 +1256,12 @@
    },
    "outputs": [],
    "source": [
-    "# df_multistep_train =\n",
-    "# df_multistep_val =\n",
-    "# df_multistep_test = \n",
+    "df_multistep_train = \n",
+    "df_multistep_val = \n",
+    "df_multistep_test =  \n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()"
    ]
   },
   {
@@ -1834,7 +1834,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "c03cd86aad0c994ea72d22f5d1ccc5229f7036305fd43c352bdee64903af391a"
+    "hash": "25f86e43ea643a5055e1343c8c3d71d953a55c926c90e3ef9080ddf0b48d564c"
    }
   }
  },
