--- a/S03 - Time Series/BLU06 - Machine Learning for Time Series/Exercise notebook.ipynb
+++ b/S03 - Time Series/BLU06 - Machine Learning for Time Series/Exercise notebook.ipynb
@@ -1243,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1256,9 +1256,12 @@
    },
    "outputs": [],
    "source": [
-    "df_multistep_train = \n",
-    "df_multistep_val = \n",
-    "df_multistep_test =  \n",
+    "def train_test_val_split(df_: pd.DataFrame, n: int):\n",
+    "    df_ = df_.copy()\n",
+    "    return df_.iloc[:-n*2], df_.iloc[-n*2:-n], df_.iloc[-n:]\n",
+    "\n",
+    "\n",
+    "df_multistep_train, df_multistep_val, df_multistep_test =  train_test_val_split(df, 24)\n",
     "\n",
     "# YOUR CODE HERE\n",
     "# raise NotImplementedError()"
@@ -1266,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "deletable": false,
     "editable": false,
