--- a/S04 - Text Classification/BLU07 - Feature Extraction/Exercise notebook.ipynb
+++ b/S04 - Text Classification/BLU07 - Feature Extraction/Exercise notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -14,7 +14,16 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to /home/jrr/nltk_data...\n",
+      "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
+     ]
+    }
+   ],
    "source": [
     "import hashlib # for grading\n",
     "\n",
@@ -72,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -95,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -108,7 +117,22 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['3M Company (MMM) -- Industrials',\n",
+       " 'Abbott Laboratories (ABT) -- Health Care',\n",
+       " 'AbbVie Inc. (ABBV) -- Health Care',\n",
+       " 'ABIOMED Inc (ABMD) -- Health Care',\n",
+       " 'Accenture plc (ACN) -- Information Technology']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# check the format\n",
     "companies[:5]"
@@ -153,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -169,12 +193,13 @@
     "# ans = [ ... ]\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()\n",
+    "ans = [company for company in companies if re.search('Health Care|Real Estate', company)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -215,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -231,12 +256,13 @@
     "# ans_initials = ...\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()\n",
+    "ans_initials = [company for company in companies if re.search('^[A-Z]\\.', company)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -249,7 +275,15 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of companies starting with an initial:  7\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Number of companies starting with an initial: \" , len(ans_initials))\n",
     "assert 'A.O. Smith Corp (AOS) -- Industrials' in ans_initials\n",
@@ -284,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -300,12 +334,13 @@
     "# ans_single = [ ... ]\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()\n",
+    "ans_single = [company[:re.search('\\([A-Z]?\\)', company).start()].strip() for company in companies if re.search('\\([A-Z]?\\)', company)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2279,7 +2314,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "BLU07",
    "language": "python",
    "name": "python3"
   },
@@ -2293,7 +2328,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.16"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "2305210ca5fdad94fa1cd221a74becf23a354f44d65f71ce41df5d75411d1cc1"
+   }
   }
  },
  "nbformat": 4,
