--- a/S04 - Text Classification/BLU07 - Feature Extraction/Exercise notebook.ipynb
+++ b/S04 - Text Classification/BLU07 - Feature Extraction/Exercise notebook.ipynb
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -471,7 +471,16 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Size of dataset: 1993\n",
+      "Distribution of classes: {0: 994, 1: 999}\n"
+     ]
+    }
+   ],
    "source": [
     "def get_data_stats(X, y):\n",
     "    print(f\"Size of dataset: {len(X)}\")\n",
@@ -503,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -516,7 +525,17 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train size: 1594\n",
+      "Dev size: 199\n",
+      "Test size: 200\n"
+     ]
+    }
+   ],
    "source": [
     "# train dev test split\n",
     "X_train, X_temp, y_train, y_temp = train_test_split(X, y, test_size=0.2, random_state=42)\n",
@@ -563,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -587,14 +606,14 @@
     "    data - list of strings containing the text to tokenize\n",
     "    tokenizer - nltk tokenizer\n",
     "    \"\"\"\n",
-    "    \n",
+    "    return [\" \".join(tokenizer.tokenize(data_part)) for data_part in data]\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "#     raise NotImplementedError()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -644,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -666,12 +685,13 @@
     "    \"\"\"\n",
     "\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    # raise NotImplementedError()\n",
+    "    return [data_part.lower() for data_part in data]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -720,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -740,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -766,14 +786,16 @@
     "    # Filter the stopwords from the text\n",
     "    # data_no_stopwords = ...\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
+    "\n",
+    "    data_no_stopwords = [\" \".join([part_slice for part_slice in data_part.split() if part_slice not in stopword_list]) for data_part in data]\n",
     "    \n",
     "    return data_no_stopwords\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -824,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -846,12 +868,14 @@
     "    \"\"\"\n",
     "\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    # raise NotImplementedError()\n",
+    "    pattern = re.compile(\"[\" + re.escape(string.punctuation) + \"]\")\n",
+    "    return [re.sub(pattern, \"\", data_part) for data_part in data]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -891,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -914,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -958,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -981,12 +1005,13 @@
     "    \"\"\"\n",
     "\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    # raise NotImplementedError()\n",
+    "    return [\" \".join([stemmer.stem(part_slice) for part_slice in data_part.split()]) for data_part in data]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1041,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1068,42 +1093,44 @@
     "        # Tokenize sentence so it each sentence contains spaced words or tokens\n",
     "        # sentences_preprocessed = ...\n",
     "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        # raise NotImplementedError()\n",
+    "        sentences_preprocessed = apply_tokenizer(data, self.tokenizer)\n",
+    "\n",
     "        \n",
     "        # Lowercase\n",
     "        if self.lower:\n",
-    "            # sentences_preprocessed = ...\n",
+    "            sentences_preprocessed = apply_lowercase(sentences_preprocessed)\n",
     "            # YOUR CODE HERE\n",
-    "            raise NotImplementedError()\n",
+    "            # raise NotImplementedError()\n",
     "\n",
     "        if self.stopwords:\n",
-    "            # sentences_preprocessed = ...\n",
+    "            sentences_preprocessed = apply_filter_stopwords(sentences_preprocessed, self.stopwords)\n",
     "            # YOUR CODE HERE\n",
-    "            raise NotImplementedError()\n",
+    "            # raise NotImplementedError()\n",
     "            \n",
     "        # Remove punctuation\n",
     "        if self.remove_punct:\n",
-    "            # sentences_preprocessed = ...\n",
+    "            sentences_preprocessed = apply_filter_punct(sentences_preprocessed)\n",
     "            # YOUR CODE HERE\n",
-    "            raise NotImplementedError()\n",
+    "            # raise NotImplementedError()\n",
     "        \n",
     "        # Normalize whitespace\n",
-    "        # sentences_preprocessed = ...\n",
+    "        sentences_preprocessed = normalize_whitespace(sentences_preprocessed)\n",
     "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        # raise NotImplementedError()\n",
     "    \n",
     "        # Stem words\n",
     "        if self.stemmer:\n",
-    "            # sentences_preprocessed = ...\n",
+    "            sentences_preprocessed = apply_stemmer(sentences_preprocessed, self.stemmer)\n",
     "            # YOUR CODE HERE\n",
-    "            raise NotImplementedError()\n",
+    "            # raise NotImplementedError()\n",
     "\n",
     "        return sentences_preprocessed\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1131,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {
     "deletable": false,
     "editable": false,
