--- a/S04 - Text Classification/BLU08 - Dimensionality Reduction/Exercise notebook.ipynb
+++ b/S04 - Text Classification/BLU08 - Dimensionality Reduction/Exercise notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -88,7 +88,76 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>helpfulness</th>\n",
+       "      <th>reviewText</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Old Bear; Kevin Henkes (2008) Harper Collins C...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>This book is based on the sad truth of the sta...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>When Lara's grandmother's ghost begins bashing...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Charlotte Simmons is the definitive, classic A...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Much too stereotypical for my tastes and the s...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   helpfulness                                         reviewText\n",
+       "0            1  Old Bear; Kevin Henkes (2008) Harper Collins C...\n",
+       "1            0  This book is based on the sad truth of the sta...\n",
+       "2            1  When Lara's grandmother's ghost begins bashing...\n",
+       "3            1  Charlotte Simmons is the definitive, classic A...\n",
+       "4            0  Much too stereotypical for my tastes and the s..."
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def load_data():\n",
     "    \"\"\"\n",
@@ -129,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -143,7 +212,7 @@
    },
    "outputs": [],
    "source": [
-    "def extract_features(X_train, X_test):\n",
+    "def extract_features(X_train: pd.DataFrame, X_test: pd.DataFrame):\n",
     "    \"\"\"Converts the provided text training and test data into \n",
     "    feature counts. Additionally, returns the used vectorizer, \n",
     "    the processed dataframes and the number of extracted features.\n",
@@ -158,16 +227,24 @@
     "        X_train_vec: vectorized training features\n",
     "        X_test_vec: vectorized test features\n",
     "    \"\"\"\n",
-    "    \n",
+    "    tokenizer = WordPunctTokenizer()\n",
+    "    vectorizer = CountVectorizer()\n",
+    "    X_train = X_train.apply(lambda x: \" \".join(tokenizer.tokenize(x['reviewText'].lower())), axis=1)\n",
+    "    X_test = X_test.apply(lambda x: \" \".join(tokenizer.tokenize(x['reviewText'].lower())), axis=1)\n",
+    "\n",
+    "    X_train_vec = vectorizer.fit_transform(X_train)\n",
+    "    X_test_vec = vectorizer.transform(X_test)\n",
+    "\n",
+    "    num_features = len(vectorizer.get_feature_names())\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    return vectorizer, num_features, X_train_vec, X_test_vec\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -223,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -236,7 +313,76 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>helpfulness</th>\n",
+       "      <th>reviewText</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>old bear kevin henkes harper collins childrenl...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>book based sad truth state country humor berni...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>lara grandmother ghost begins bashing guests f...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>charlotte simmons definitive classic american ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>much stereotypical tastes storyline unbelievab...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   helpfulness                                         reviewText\n",
+       "0            1  old bear kevin henkes harper collins childrenl...\n",
+       "1            0  book based sad truth state country humor berni...\n",
+       "2            1  lara grandmother ghost begins bashing guests f...\n",
+       "3            1  charlotte simmons definitive classic american ...\n",
+       "4            0  much stereotypical tastes storyline unbelievab..."
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def load_preprocessed_data():\n",
     "    \"\"\"\n",
@@ -274,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -340,7 +486,7 @@
    },
    "outputs": [],
    "source": [
-    "def train_model_naive_bayes(X_train_vec, y_train, X_test_vec, y_test):\n",
+    "def train_model_naive_bayes(X_train_vec: pd.Series, y_train: pd.Series, X_test_vec: pd.Series, y_test: pd.Series):\n",
     "    \"\"\"Returns a fitted Multinomial Naive Bayes model, the predictions on the test set\n",
     "    and the precision and recall scores for these predictions\n",
     "    \n",
@@ -358,7 +504,7 @@
     "    \"\"\"\n",
     "    \n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
     "\n",
     "    return clf, y_pred, precision, recall"
    ]
@@ -2099,7 +2245,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "blu08",
    "language": "python",
    "name": "python3"
   },
@@ -2113,7 +2259,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.16"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "16ca2675aa3ddeb0d45eeb5d75f16c9dd193af781cc0e052cb25b0d4fc9a734c"
+   }
   }
  },
  "nbformat": 4,
